src/tests/snapshots/cendol__tests__semantic_validation__rejects_bitnot_on_non_integer.snap
---
source: src/tests/semantic_validation.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: Invalid operand for unary operation: have 'double'
Span: SourceSpan(source_id=SourceId(2), start=62, end=64)
