src/tests/snapshots/cendol__tests__semantic_validation__rejects_conflicting_storage_classes.snap
---
source: src/tests/semantic_validation.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: conflicting storage class specifiers
Span: SourceSpan(source_id=SourceId(2), start=9, end=29)
